--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,18 @@
         android:theme="@style/Theme.IRONTITANX"
         tools:targetApi="31">
         <activity
+            android:name=".goals4"
+            android:exported="false" />
+        <activity
+            android:name=".goals3"
+            android:exported="false" />
+        <activity
+            android:name=".goals2"
+            android:exported="false" />
+        <activity
+            android:name=".goals1"
+            android:exported="false" />
+        <activity
             android:name=".login"
             android:exported="false" />
         <activity
