--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,21 @@
         android:theme="@style/Theme.IRONTITANX"
         tools:targetApi="31">
         <activity
+            android:name=".Assistant"
+            android:exported="false" />
+        <activity
+            android:name=".user_message"
+            android:exported="false" />
+        <activity
+            android:name=".chatbot"
+            android:exported="false" />
+        <activity
+            android:name=".CircularProgressBarWithText"
+            android:exported="false" />
+        <activity
+            android:name=".Home"
+            android:exported="false" />
+        <activity
             android:name=".login"
             android:exported="false" />
         <activity
