--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.IRONTITANX"
         tools:targetApi="31">
         <activity
+            android:name=".settings"
+            android:exported="false" />
+        <activity
+            android:name=".edit_goals"
+            android:exported="false" />
+        <activity
+            android:name=".profile_info"
+            android:exported="false" />
+        <activity
             android:name=".ReadyPlansActivity"
             android:exported="false" />
         <activity
