--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:theme="@style/Theme.IRONTITANX"
         tools:targetApi="31">
         <activity
+            android:name=".MyWorkoutPlans"
+            android:exported="false" />
+        <activity
             android:name=".NearbyGymsActivity"
             android:exported="false" />
 
